updated commit by cursor